# RizzBooks

./: .gitignore  README.md  database.db  pyproject.toml
src/: database.py  generateDB.py  main.py
src/components/views/: Checkout.py  Homepage.py  bookAdd.py  bookBuy.py  editBooks.py  login.py  manageBooks.py  search.py  signUpUser.py
src/utils/: addBooks.py  password.py
