[tool.poetry]
name = "deezbooks"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.7.1"
zxcvbn = "^4.4.28"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
